compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__rename_invalid_use_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action(code, 1)"
---
fn use_test(f) { f(Nil) }
pub fn main() {use _discard_var <- use_test()}
